# simpleshell

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/linux/: DESCRIPTION.txt
assets/plugins/: BasePlugin.lua.in  Example.lua  Plugin.lua.in  ollama.lua
config/: .pshell  options.h.in
src/: PluginConnector.hpp  PluginManager.cpp  PluginManager.hpp  ProcessManager.cpp  ProcessManager.hpp  SimpleShell.cpp  SimpleShell.hpp  luaaa.hpp  main.cpp  utils.h
tests/: test.sh  test2.sh
